--- a/veo_saas_full_mvp/veo_saas_deploy_configs/render.yaml
+++ b/veo_saas_full_mvp/veo_saas_deploy_configs/render.yaml
@@ -1,15 +1,32 @@
 services:
+  # -------------------------------
+  # Backend / Server Service
+  # -------------------------------
   - type: web
-    name: veo-saas
+    name: veo-saas-server
     env: node
-    rootDir: .             # Repo root (contains package.json)
+    rootDir: server
+    plan: free
+    buildCommand: yarn install
+    startCommand: node index.js
+    envVars:
+      - key: GOOGLE_API_KEY
+        value: "<YOUR_GOOGLE_API_KEY>"
+      - key: STRIPE_KEY
+        value: "<YOUR_STRIPE_KEY>"
+      - key: FIREBASE_KEY
+        value: "<YOUR_FIREBASE_ADMIN_KEY>"
+
+  # -------------------------------
+  # Frontend / Client Service
+  # -------------------------------
+  - type: web
+    name: veo-saas-client
+    env: node
+    rootDir: client
     plan: free
     buildCommand: yarn install && yarn build
     startCommand: yarn start
     envVars:
-      - key: GOOGLE_API_KEY
-        value: "<YOUR_GOOGLE_API_KEY>"
-      - key: VERCEL_ORG_ID
-        value: "<YOUR_VERCEL_ORG_ID>"
-      - key: VERCEL_PROJECT_ID
-        value: "<YOUR_VERCEL_PROJECT_ID>"
+      - key: API_BASE_URL
+        value: "https://<your-backend-url>"  # Update after backend deploy
