--- a/veo_saas_full_mvp/server/package.json
+++ b/veo_saas_full_mvp/server/package.json
@@ -1,9 +1,9 @@
-{
+er{
   "name": "veo-saas-server",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": " node server/index.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
